first implementation of argparser
+ implemented argparser 
+ implementated QLineEdit to print outcome instead of a console output

--- a/wheretoeat.ui
+++ b/wheretoeat.ui
@@ -47,6 +47,22 @@
              </property>
             </widget>
            </item>
+           <item>
+            <widget class="QLineEdit" name="Le_showresult">
+             <property name="layoutDirection">
+              <enum>Qt::LeftToRight</enum>
+             </property>
+             <property name="text">
+              <string>display result here</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
+             <property name="readOnly">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
           </layout>
          </item>
         </layout>
