--- a/wheretoeat.ui
+++ b/wheretoeat.ui
@@ -48,6 +48,19 @@
             </widget>
            </item>
            <item>
+            <widget class="QPushButton" name="btn_Surpriseme">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="text">
+              <string>Surprise Me</string>
+             </property>
+            </widget>
+           </item>
+           <item>
             <widget class="QLineEdit" name="Le_showresult">
              <property name="layoutDirection">
               <enum>Qt::LeftToRight</enum>
