--- a/wheretoeat.ui
+++ b/wheretoeat.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>279</width>
-    <height>190</height>
+    <width>226</width>
+    <height>178</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -17,7 +17,19 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>Where To Eat</string>
+   <string>mWhereToEat</string>
+  </property>
+  <property name="toolTip">
+   <string/>
+  </property>
+  <property name="toolButtonStyle">
+   <enum>Qt::ToolButtonIconOnly</enum>
+  </property>
+  <property name="tabShape">
+   <enum>QTabWidget::Triangular</enum>
+  </property>
+  <property name="unifiedTitleAndToolBarOnMac">
+   <bool>false</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -47,7 +59,7 @@
              </property>
             </widget>
            </item>
-           <item>
+           <item alignment="Qt::AlignHCenter|Qt::AlignVCenter">
             <widget class="QPushButton" name="btn_Surpriseme">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
